--- a/config.json.example
+++ b/config.json.example
@@ -1,6 +1,6 @@
 {
-  "TOKEN": "",
-  "YOUTUBE_API_KEY": "",
+  "TOKEN": "NzE0NDIxMTM5MjY2MzM4ODU3.XsuaiA.pG_3oGOHimmkWn5fUojaROURgvE",
+  "YOUTUBE_API_KEY": "AIzaSyAyMuHN-yKv4mCYIKHU7dpzaKjF55_CID0",
   "SOUNDCLOUD_CLIENT_ID": "",
   "MAX_PLAYLIST_SIZE": 10,
   "PREFIX": "/",
